# bricks_cpp_prototype

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  yolov8_seg.cpp  yolov8_seg_pt.cpp
include/: color_histogram.hpp  color_space_cell.hpp  yolov8_seg_pt.hpp
